force-app/main/default/objects/EventRelated__c/EventRelated__c.object-meta.xml
<CustomObject>
    <description>Objeto espelho do evento, para cada evento criado, será necessário criar um registro neste objeto. Este objeto existe para que seja possível relacionar o objeto de respostas ao objeto de eventos, porém, o Salesforce não permite que seja criado um relacionamento diretamente do objeto Respostas para o objeto Eventos, então criamos um objeto evento relacionado, que se relaciona com Eventos e Respostas.</description>
    
    <label>Evento Relacionado</label>
    <nameField>
        <displayFormat>EVT-{00000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eventos Relacionados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>