force-app/main/default/objects/EventRelated__c/fields/ChildEvent__c.field-meta.xml
<CustomField>
    <fullName>ChildEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evento Filho</label>
    <referenceTo>EventRelated__c</referenceTo>
    <relationshipLabel>Eventos Relacionados (Evento Filho)</relationshipLabel>
    <relationshipName>Eventos_Relacionados1</relationshipName>
    <type>Lookup</type>
</CustomField>