force-app/main/default/objects/EventRelated__c/fields/DistributionPublicUrl__c.field-meta.xml
<CustomField>
    <fullName>DistributionPublicUrl__c</fullName>
    <label>Links Públicos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>