force-app/main/default/objects/EventRelated__c/fields/ParentEvent__c.field-meta.xml
<CustomField>
    <fullName>ParentEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evento Pai</label>
    <referenceTo>EventRelated__c</referenceTo>
    <relationshipLabel>Eventos Relacionados</relationshipLabel>
    <relationshipName>Eventos_Relacionados</relationshipName>
    <type>Lookup</type>
</CustomField>