force-app/main/default/objects/EventRelated__c/fields/RTRComments__c.field-meta.xml
<CustomField>
    <fullName>RTRComments__c</fullName>
    <label>Comentários PDF</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>